Fix other issues from merge conflicts